--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         
         // Esta função deve ser rodada APENAS UMA VEZ para configurar os usuários iniciais.
         // DESCOMENTE A LINHA ABAIXO, execute o site e depois COMENTE NOVAMENTE.
-        // setupInitialUsers();
+        setupInitialUsers();
         const setupInitialUsers = async () => {
              const initialUsers = [
                 { username: 'admin', password: '123', role: 'comandante' },
