--- a/index.html
+++ b/index.html
@@ -47,14 +47,6 @@
         .bg-card {
             background-color: #1a202c;
         }
-        #map {
-            width: 100%;
-            height: 500px;
-            background-image: url('https://i.imgur.com/vR9c55d.jpg');
-            background-size: cover;
-            background-position: center;
-            position: relative;
-        }
         .pin {
             width: 20px;
             height: 20px;
@@ -108,7 +100,6 @@
             <button id="tab-civil-button" class="tab-button px-4 py-2 font-medium rounded-t-lg transition-all">Cadastrar Civil</button>
             <button id="tab-visualizar-button" class="tab-button px-4 py-2 font-medium rounded-t-lg transition-all">Visualizar Cidadãos</button>
             <button id="tab-log-button" class="tab-button px-4 py-2 font-medium rounded-t-lg transition-all">Registro de Atividades</button>
-            <button id="tab-map-button" class="tab-button px-4 py-2 font-medium rounded-t-lg transition-all">Mapa</button>
         </div>
 
         <!-- Conteúdo das abas -->
@@ -220,10 +211,6 @@
                                 <option value="Jacarezinho">Jacarezinho</option>
                                 <option value="CPX Rios">CPX Rios</option>
                             </select>
-                        </div>
-                        <div class="md:col-span-2">
-                            <label for="new-civil-char-img" class="block text-gray-300 font-medium mb-2">Imagem do Personagem</label>
-                            <input type="file" id="new-civil-char-img" class="w-full px-4 py-2 bg-gray-700 text-white border border-gray-600 rounded-lg">
                         </div>
                         <div class="md:col-span-2 space-y-4" id="porte-details-container" style="display: none;">
                             <h3 class="text-lg font-semibold text-gray-200 border-b pb-1">Detalhes do Porte de Arma</h3>
@@ -595,7 +582,7 @@
                         renderLogs(logs);
                     });
                     
-                    // setupInitialUsers();
+                    setupInitialUsers();
 
                 } catch (error) {
                     console.error("Erro ao inicializar Firebase:", error);
